
version 2.0-alpha XX-Apr-2011
. [NEW] Added support for OpenGL ES 2.0. OpenGL ES 1.1 is no longer supported
. [NEW] CProgressTimer: 
            -Convenience class constructor now passes in CCSprite (this gives developers easier access to timer with CCSpriteFrames, CCSprites, etc)
            - Reduced the progress timer types to just radial and bar - added in reverse, midpoint, barChangeRate to be have more flexible options to modify the progress.
. [NEW] Director: Removed Fast, FastThreaded and NSTimer director. The only one available is DisplayLink.
. [NEW] Math: Using kazmath for matrix and projection operations
. [NEW] Math: Using NEON Matrix Multiplication from Oolong project
. [NEW] ccGLState: added helper functions that keeps the GL state in order to prevent setters/getters
. [FIX] All: Removed deprecated methods and classes that were scheduled for removal post 1.0
. [FIX] CCProgressTimer: reverse renamed to reverseDirection in order to prevent possible collision with action#reverse
. [FIX] Xcode: cocosLive: Removed. Use OpenFeint or GameCenter instead
. [FIX] Xcode: FontLabel: Removed since in iOS 4 you can load custom TTF
. [FIX] Xcode: TouchJSON: Removed. No longer needed since cocosLive was removed
. [FIX] Xcode: Tremor / vorbis: Removed. Experimental sound engine is no longer supported
. [FIX] Xcode: iOS 4 is minimun required to run


version 1.0 - XX-Jun-2011
. [NEW] Actions: Added SkewTo and SkewBy actions
. [NEW] LabelTTF: Added support for LineBreakMode. Mac only supports Word-Break.
. [NEW] Node / Sprite: Added support for SkewX and SkewY properties
. [NEW] Tests: Added skewX, skewY tests for sprites and actions. Added linebreak tests for LabelTTF.
. [NEW] TextureCache: Added dumpCachedTextureInfo method. Shows the RAM used by the cached textures (issue #1154)
. [FIX] cocosLive: Fixed memory leaks in NSURLConnection
. [FIX] Sprites: DisplayedFrame returns the correct frame (issue #1182)